# EDPA-2017-2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  PreLoad.cmake  README.md
Caio-Hash/: Hash.depend  Hash.layout  README.md  main.cpp
resultados/: n-1.000.000.txt  n-10.000-novo.txt  n-10.000.000.txt  n-10.000.txt  n-100.000-novo.txt  n-100.000.txt  n1.000.000.txt  n10.000.000.txt  n10.000.txt  n100.000.txt
src/: main.cpp  test.cpp  test_time_keeping.cpp  timeAndRNG.cpp  timeAndRNG.h  wg.cpp
